# geopy-foundations

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_foundations.ipynb  02_phase2_spatial_handling.ipynb
